bpo-40904: Fix segfault in the new parser with f-string containing yield statements with no value (GH-20701)